chore: enhancement get actions service