@@ -1,10 +1,12 @@
 package org.dummy.brms.dummy_brms.services.impl;
 
 import org.dummy.brms.dummy_brms.model.ActionParamDirection;
+import org.dummy.brms.dummy_brms.model.dto.ActionParamResponseDTO;
 import org.dummy.brms.dummy_brms.model.dto.ActionResponseDTO;
 import org.dummy.brms.dummy_brms.model.dto.ActionWithParamsResponseDTO;
 import org.dummy.brms.dummy_brms.mybatis.mappers.ActionParamsMapper;
 import org.dummy.brms.dummy_brms.mybatis.mappers.ActionsMapper;
+import org.dummy.brms.dummy_brms.mybatis.pojo.ActionParams;
 import org.dummy.brms.dummy_brms.services.ActionService;
 import org.mybatis.dynamic.sql.select.SelectDSLCompleter;
 import org.mybatis.dynamic.sql.select.render.SelectStatementProvider;
@@ -12,6 +14,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class ActionServiceImpl implements ActionService {
@@ -35,14 +38,20 @@ public class ActionServiceImpl implements ActionService {
 
     @Override
     public List<ActionWithParamsResponseDTO> getActionsWithParams() {
+
         return actionParamsMapper.select(SelectDSLCompleter.allRows()).stream()
-                .map(action -> ActionWithParamsResponseDTO.builder()
-                        .actionName(action.getAction())
-                        .paramName(action.getParamName())
-                        .paramType(action.getParamType())
-                        .paramDirection(ActionParamDirection.valueOf(action.getParamDirection()))
-                        .build())
-                .toList();
+                .collect(Collectors.groupingBy(ActionParams::getAction)).entrySet().stream().map(entry ->
+                    ActionWithParamsResponseDTO.builder()
+                            .actionName(entry.getKey())
+                            .actionParams(entry.getValue().stream().map(actionParams ->
+                                    ActionParamResponseDTO.builder()
+                                            .paramName(actionParams.getParamName())
+                                            .paramType(actionParams.getParamType())
+                                            .paramDirection(ActionParamDirection.valueOf(actionParams.getParamDirection()))
+                                            .build()
+                            ).toList())
+                            .build()
+                ).collect(Collectors.toList());
     }
 
 }
